# DG-TWFD

./: .gitignore  .gitmodules  A100_DDPM_CIFAR10_EXPERIMENT_PIPELINE.md  A100_DDPM_CIFAR10_sampling.md  A100_DDPM_CIFAR10_training.md  AGENTS.md  CHANGELOG.md  CTM_guide.md  DATASET_AND_TEACHER_INTERFACE_PLAN.md  EVALUATION_SYSTEM_PLAN.md  FLOW_MATCHING_BASELINE_PIPELINE.md  GIT_WORKFLOW.md  MAP_BRANCH_EXPERIMENT_PIPELINE.md  MAP_BRANCH_MASTER_PLAN.md  README.md  REFACTOR_MASTER_PLAN.md  TEACHER_DATASET_INTEGRATION_GUIDE.md  codex_p1.md  codex_p2.md  codex_p3.md  codex_p4.md  codex_p5.md  flow_mathching_guide.md  inspect_pt.py  pyproject.toml  required_experiments.md  sample.py  technical_report.md  technical_report_flow.md  train.py  visualize.py
Guide/: teacher_dataset.md
artifacts/: sample_diag_steps4.pt  samples_steps4.pt
checkpoints/: best.pt  epoch_001.pt  epoch_002.pt  epoch_003.pt  epoch_004.pt  epoch_005.pt
checkpoints_phase4_smoke/: best.pt  epoch_001.pt  epoch_002.pt  epoch_003.pt  epoch_004.pt  epoch_005.pt
checkpoints_shard_smoke/: best.pt  epoch_001.pt
config/: default.yaml
configs/: base.yaml
docs/: ACTIVE_CONTEXT.md  dgtd_v3_round2_patch_notes.md  dgtd_v3_round2_server_smoke_instructions.md  dgtd_v3_round2_verification.md  dgtd_v3_round4_online_mainline_patch_notes.md  dgtd_v3_round4_online_mainline_server_smoke_instructions.md  dgtd_v3_round4_online_mainline_verification.md
patches/: consistency_models_unet_baseline_compat.patch
recover/: README_recover.md  download_dataset.sh  download_models.sh  env_setup.sh  recover_all.sh
(+376 files in other folders)
