[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dg-twfd"
version = "0.1.0"
description = "Phase 1 scaffold for Defect-Guided Time-Warp Flow Distillation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "torch>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
teacher = [
  "diffusers>=0.30",
  "transformers>=4.40",
  "accelerate>=0.30",
  "safetensors>=0.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
